# haiku-todo

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.txt
AppEngine/: Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskListManager.cpp  TaskListManager.h  TaskUtility.cpp  TaskUtility.h
ExternalLibs/SuperEasyJSON/: json.cpp  json.h  readme.txt
HaikuToDo/: AddTask.hpp  Application.cpp  Application.hpp  Category.hpp  CreateCategory.hpp  Internet.hpp  MainWindow.cpp  MainWindow.hpp  Start.cpp  Task.hpp  TaskFS.cpp  TaskFS.hpp  TaskGoogle.cpp  TaskGoogle.hpp  TaskLocal.cpp  TaskLocal.hpp  TaskManager.hpp  TaskSQL.cpp  TaskSQL.hpp  TaskSync.hpp
PluginEngine/: PluginLoader.cpp  PluginLoader.h  SynchronizationPlugin.cpp  SynchronizationPlugin.h  TaskSerializer.cpp  TaskSerializer.h  TaskSynchronizer.cpp  TaskSynchronizer.h
Plugins/GoogleTasks/: GTasksSynchronizationPlugin.cpp  GTasksSynchronizationPlugin.h  GTasksSynchronizer.cpp  GTasksSynchronizer.h
Plugins/GoogleTasks/Utility/: TimeRfc3339.cpp  TimeRfc3339.h
Utility/: AutoDeleter.cpp  AutoDeleter.h  Internet.cpp  Internet.h  OAuth2.cpp  OAuth2.h  Utility.cpp  Utility.h
engine/: Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskListManager.cpp  TaskListManager.h  TaskUtility.cpp  TaskUtility.h
